Fix java version compatibility issues + adjust imports and dependencies